# soulvoice

./: .gitignore  README.md  pyproject.toml
src/soulvoice/: __init__.py  attendance.py
