[project]
name = "soulvoice"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "requests>=2.31.0",
    "ddddocr>=1.4.7",
    "lxml>=4.9.3",
    "pillow==9.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
